--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Kanika.Choudhary\AppData\Local\Temp\testng-eclipse-987900920\testng-customsuite.xml</span>
+                    <span>C:\Users\Kanika.Choudhary\AppData\Local\Temp\testng-eclipse--357920149\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,32 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.orhrm.tests.LeaveTests" class="method navigator-link" hash-for-method="addLeaveType">addLeaveType</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.orhrm.tests.NewTest" class="method navigator-link" hash-for-method="appium">appium</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.orhrm.tests.LeaveTests" class="method navigator-link" hash-for-method="loginTestWithInvalidUsername">loginTestWithInvalidUsername</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.orhrm.tests.LeaveTests" class="method navigator-link" hash-for-method="loginTestWithValidCredential">loginTestWithValidCredential</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.orhrm.tests.LeaveTests" class="method navigator-link" hash-for-method="pimSearch_EmployeeFilters">pimSearch_EmployeeFilters</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.orhrm.tests.LeaveTests" class="method navigator-link" hash-for-method="time_Timesheets_then_ProjectInfo_Customers_Add">time_Timesheets_then_ProjectInfo_Customers_Add</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -143,49 +118,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.orhrm.tests.LeaveTests</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="addLeaveType">
-                  </a> <!-- addLeaveType -->
-                  <span class="method-name">addLeaveType</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginTestWithInvalidUsername">
-                  </a> <!-- loginTestWithInvalidUsername -->
-                  <span class="method-name">loginTestWithInvalidUsername</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginTestWithValidCredential">
-                  </a> <!-- loginTestWithValidCredential -->
-                  <span class="method-name">loginTestWithValidCredential</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="pimSearch_EmployeeFilters">
-                  </a> <!-- pimSearch_EmployeeFilters -->
-                  <span class="method-name">pimSearch_EmployeeFilters</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="time_Timesheets_then_ProjectInfo_Customers_Add">
-                  </a> <!-- time_Timesheets_then_ProjectInfo_Customers_Add -->
-                  <span class="method-name">time_Timesheets_then_ProjectInfo_Customers_Add</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -204,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Kanika.Choudhary\AppData\Local\Temp\testng-eclipse-987900920\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Kanika.Choudhary\AppData\Local\Temp\testng-eclipse--357920149\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -213,7 +145,6 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.orhrm.tests.LeaveTests&quot;/&gt;
       &lt;class name=&quot;com.orhrm.tests.NewTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
@@ -228,7 +159,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (2 classes)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -254,31 +185,11 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'pimSearch_EmployeeFilters')
-data.setCell(0, 2, 'com.orhrm.tests.LeaveTests')
-data.setCell(0, 3, 23069);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'time_Timesheets_then_ProjectInfo_Customers_Add')
-data.setCell(1, 2, 'com.orhrm.tests.LeaveTests')
-data.setCell(1, 3, 21329);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'addLeaveType')
-data.setCell(2, 2, 'com.orhrm.tests.LeaveTests')
-data.setCell(2, 3, 16350);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'appium')
-data.setCell(3, 2, 'com.orhrm.tests.NewTest')
-data.setCell(3, 3, 15331);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'loginTestWithValidCredential')
-data.setCell(4, 2, 'com.orhrm.tests.LeaveTests')
-data.setCell(4, 3, 14869);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'loginTestWithInvalidUsername')
-data.setCell(5, 2, 'com.orhrm.tests.LeaveTests')
-data.setCell(5, 3, 6925);
+data.setCell(0, 1, 'appium')
+data.setCell(0, 2, 'com.orhrm.tests.NewTest')
+data.setCell(0, 3, 91116);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -309,73 +220,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.orhrm.tests.LeaveTests</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">addLeaveType</span>
-                <span class="method-start">10558 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">26922 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">27704 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginTestWithInvalidUsername</span>
-                <span class="method-start">36759 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">43686 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">44506 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">loginTestWithValidCredential</span>
-                <span class="method-start">54173 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">69046 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">69994 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">pimSearch_EmployeeFilters</span>
-                <span class="method-start">80486 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">103558 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">104407 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">time_Timesheets_then_ProjectInfo_Customers_Add</span>
-                <span class="method-start">115147 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">136479 ms</span>
-              </div> <!-- configuration-method after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
               <div class="chronological-class-name">com.orhrm.tests.NewTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">appium</span>
-                <span class="method-start">137438 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
